--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>
         Webpack App
     </title>
-<script defer src="bundle8317d79732a0f95ac635.js"></script></head>
+<script defer src="./dist/bundle8317d79732a0f95ac635.js"></script></head>
 
 <body>
     <div class="container">
